force-app/main/default/objects/Lead/fields/Address_for_Legal__c.field-meta.xml
<CustomField>
    <fullName>Address_for_Legal__c</fullName>
    <formula>Street + &quot;, &quot; + City + &quot;, &quot; + TEXT(StateCode) + &quot; &quot; + PostalCode</formula>
    <label>Address for Legal</label>
    <type>Text</type>
</CustomField>