force-app/main/default/objects/Lead/fields/Adibot_Current_Dental_Insurance_Score__c.field-meta.xml
<CustomField>
    <fullName>Adibot_Current_Dental_Insurance_Score__c</fullName>
    <formula>CASE(Adibot_What_Dental_Insurance__c, 
&apos;Not Sure&apos;, 0, 
1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Archie BotCurrent Dental Insurance Score</inlineHelpText>
    <label>Archie Bot Current Dental Insurance Scor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>