force-app/main/default/objects/Lead/fields/Adibot_Have_Dental_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Adibot_Have_Dental_Insurance__c</fullName>
    <label>Archie Bot Have Dental Insurance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>