force-app/main/default/objects/Lead/fields/Adibot_Have_Dental_Insurance_Score__c.field-meta.xml
<CustomField>
    <fullName>Adibot_Have_Dental_Insurance_Score__c</fullName>
    <formula>CASE( Adibot_Have_Dental_Insurance__c , 
&apos;Yes&apos;, 2, 
&apos;No&apos;, 1,
&apos;Not Sure&apos;, 0,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Archie Bot Have Dental Insurance Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>