force-app/main/default/objects/Lead/fields/Adibot_How_Soon_Tooth_Replacement__c.field-meta.xml
<CustomField>
    <fullName>Adibot_How_Soon_Tooth_Replacement__c</fullName>
    <label>Archie Bot How Soon Tooth Replacement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>