force-app/main/default/objects/Lead/fields/Adibot_How_Soon_Tooth_Replacement_Score__c.field-meta.xml
<CustomField>
    <fullName>Adibot_How_Soon_Tooth_Replacement_Score__c</fullName>
    <formula>CASE( Adibot_How_Soon_Tooth_Replacement__c, 
&apos;Immediate&apos;, 5, 
&apos;Within a Few Months&apos;, 2,
&apos;Not Sure&apos;,0,
&apos;Just Researching&apos;,0,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Archie Bot How Soon Tooth Replacement Score</inlineHelpText>
    <label>Archie Bot How Soon Tooth Replacement Sc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>