force-app/main/default/objects/Lead/fields/Adibot_Interested_Financing_Options__c.field-meta.xml
<CustomField>
    <fullName>Adibot_Interested_Financing_Options__c</fullName>
    <label>Archie Bot Interested Financing Options</label>
    <length>255</length>
    <type>Text</type>
</CustomField>