force-app/main/default/objects/Lead/fields/Adibot_Interested_Financing_Options_Scor__c.field-meta.xml
<CustomField>
    <fullName>Adibot_Interested_Financing_Options_Scor__c</fullName>
    <formula>CASE( Adibot_Interested_Financing_Options__c , 
&apos;Yes&apos;, 2, 
&apos;No&apos;, 1,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Archie Bot Interested Financing Options Score</inlineHelpText>
    <label>Archie Bot Interested Financing OptionsS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>