force-app/main/default/objects/Lead/fields/Adibot_Preventing_Seeking_Treatment__c.field-meta.xml
<CustomField>
    <fullName>Adibot_Preventing_Seeking_Treatment__c</fullName>
    <label>Archie Bot Preventing Seeking Treatment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>