force-app/main/default/objects/Lead/fields/Adibot_PreventingSeeking_Treatment_Score__c.field-meta.xml
<CustomField>
    <fullName>Adibot_PreventingSeeking_Treatment_Score__c</fullName>
    <formula>CASE( Adibot_Preventing_Seeking_Treatment__c , 
&apos;Dental Anxiety&apos;, 2, 
&apos;Cost of Treatment&apos;, 2,
&apos;Social Acceptance&apos;, 2,
&apos;Multiple Reasons&apos;, 4,
&apos;Something Else&apos;, 1,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Archie Bot Preventing Seeking Treatment Score</inlineHelpText>
    <label>Archie Bot PreventingSeeking Treatment S</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>