force-app/main/default/objects/Lead/fields/Adibot_Selected_Practice__c.field-meta.xml
<CustomField>
    <fullName>Adibot_Selected_Practice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Archie Selected Practice</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (Archie Selected Practice)</relationshipLabel>
    <relationshipName>LeadsSelectedPractice</relationshipName>
    <type>Lookup</type>
</CustomField>