force-app/main/default/objects/Lead/fields/Adibot_Total_Score__c.field-meta.xml
<CustomField>
    <fullName>Adibot_Total_Score__c</fullName>
    <formula>Adibot_Type_Dental_Treatment_Score__c +
 Adibot_Have_Dental_Insurance_Score__c +
 Adibot_Interested_Financing_Options_Scor__c +
 Adibot_Current_Dental_Insurance_Score__c +
 Adibot_PreventingSeeking_Treatment_Score__c +
 Adibot_How_Soon_Tooth_Replacement_Score__c +
 ArchieBot_Extractions_NDWP_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Archie Bot Total Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>