force-app/main/default/objects/Lead/fields/Adibot_Total_ScoreColor__c.field-meta.xml
<CustomField>
    <fullName>Adibot_Total_ScoreColor__c</fullName>
    <formula>IF(Adibot_Total_Score__c &gt; 13, 

IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;red&quot;, 30, 30),

IF(Adibot_Total_Score__c &gt; 5,

IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;yellow&quot;, 30, 30),

IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 30, 30))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Archie Bot Total Score</label>
    <type>Text</type>
</CustomField>