force-app/main/default/objects/Lead/fields/Adibot_Type_Dental_Treatment__c.field-meta.xml
<CustomField>
    <fullName>Adibot_Type_Dental_Treatment__c</fullName>
    <label>Archie Bot Type Dental Treatment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>