force-app/main/default/objects/Lead/fields/Adibot_Type_Dental_Treatment_Score__c.field-meta.xml
<CustomField>
    <fullName>Adibot_Type_Dental_Treatment_Score__c</fullName>
    <formula>CASE( Adibot_Type_Dental_Treatment__c , 
&apos;Dentures&apos;, 1,
&apos;Implants&apos;, 2,
&apos;Both&apos;, 4,
&apos;Neither&apos;,0,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Archie Bot Type Dental Treatment Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>