force-app/main/default/objects/Lead/fields/Adibot_What_Dental_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Adibot_What_Dental_Insurance__c</fullName>
    <label>Archie Bot Current Dental Insurance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>