force-app/main/default/objects/Lead/fields/Archie_Bot_City_and_State__c.field-meta.xml
<CustomField>
    <fullName>Archie_Bot_City_and_State__c</fullName>
    <label>Archie Bot City and State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>