force-app/main/default/objects/Lead/fields/Archie_Bot_Question_or_Concern__c.field-meta.xml
<CustomField>
    <fullName>Archie_Bot_Question_or_Concern__c</fullName>
    <label>Archie Bot Question or Concern</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>