force-app/main/default/objects/Lead/fields/Archie_Bot_Question_or_Concern_del__c.field-meta.xml
<CustomField>
    <fullName>Archie_Bot_Question_or_Concern_del__c</fullName>
    <label>Archie Bot Question or Concern (deleted)</label>
    <type>TextArea</type>
</CustomField>