force-app/main/default/objects/Lead/fields/Archie_Bot_Total_Score_Text__c.field-meta.xml
<CustomField>
    <fullName>Archie_Bot_Total_Score_Text__c</fullName>
    <formula>IF(Adibot_Total_Score__c &gt; 13, &quot;HOT&quot;, IF(Adibot_Total_Score__c &gt; 5,&quot;WARM&quot;,&quot;COLD&quot;))</formula>
    <label>Archie Bot Total Score (Text)</label>
    <type>Text</type>
</CustomField>