force-app/main/default/objects/Lead/fields/ArchieBot_Extractions_NDWP__c.field-meta.xml
<CustomField>
    <fullName>ArchieBot_Extractions_NDWP__c</fullName>
    <label>ArchieBot Extractions NDWP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>