force-app/main/default/objects/Lead/fields/ArchieBot_Extractions_NDWP_Score__c.field-meta.xml
<CustomField>
    <fullName>ArchieBot_Extractions_NDWP_Score__c</fullName>
    <formula>CASE( ArchieBot_Extractions_NDWP__c ,
&apos;Yes&apos;, 5,
&apos;No&apos;,0,
2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ArchieBot Extractions NDWP Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>