force-app/main/default/objects/Lead/fields/BOA_Data__c.field-meta.xml
<CustomField>
    <fullName>BOA_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Temp field for text message about BoA data breach to practice owners</description>
    <label>BOA_Data</label>
    <type>Checkbox</type>
</CustomField>