force-app/main/default/objects/Lead/fields/BrokerName__c.field-meta.xml
<CustomField>
    <fullName>BrokerName__c</fullName>
    <label>Broker</label>
    <length>255</length>
    <type>Text</type>
</CustomField>