force-app/main/default/objects/Lead/fields/Calendly__c.field-meta.xml
<CustomField>
    <fullName>Calendly__c</fullName>
    <formula>HYPERLINK(  Owner:User.Calendly_Link__c + &apos;?sfid=&apos; + Id + &apos;&amp;name=&apos; + FirstName + &apos; &apos; + LastName + &apos;&amp;email=&apos; + Email, &apos;Get Link&apos;)</formula>
    <inlineHelpText>Open your meeting page and copy the URL before sending to the lead.</inlineHelpText>
    <label>Calendly</label>
    <type>Text</type>
</CustomField>