force-app/main/default/objects/Lead/fields/Comment_Summary__c.field-meta.xml
<CustomField>
    <fullName>Comment_Summary__c</fullName>
    <label>Comment / Summary</label>
    <type>TextArea</type>
</CustomField>