force-app/main/default/objects/Lead/fields/Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Type__c</fullName>
    <label>Contact Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Practice Owner</fullName>
            </value>
            <value>
                <fullName>Associate Dentist</fullName>
            </value>
            <value>
                <fullName>Dental Assistant</fullName>
            </value>
            <value>
                <fullName>FDA</fullName>
            </value>
            <value>
                <fullName>Other Employee</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Seller</fullName>
            </value>
            <value>
                <fullName>Advisor</fullName>
            </value>
            <value>
                <fullName>Accountant</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Lab Manager</fullName>
            </value>
            <value>
                <fullName>Managing Dentist</fullName>
            </value>
            <value>
                <fullName>Treatment Coordinator</fullName>
            </value>
            <value>
                <fullName>Office Manager</fullName>
            </value>
            <value>
                <fullName>Purchaser</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>