force-app/main/default/objects/Lead/fields/Digital_Dentures__c.field-meta.xml
<CustomField>
    <fullName>Digital_Dentures__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Digital Dentures</label>
    <type>Checkbox</type>
</CustomField>