force-app/main/default/objects/Lead/fields/Do_you_do_Direct_To_Consumer_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Do_you_do_Direct_To_Consumer_Marketing__c</fullName>
    <label>Do you do Direct To Consumer Marketing?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>