force-app/main/default/objects/Lead/fields/Doctor_Name_s__c.field-meta.xml
<CustomField>
    <fullName>Doctor_Name_s__c</fullName>
    <label>Doctor Name(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>