force-app/main/default/objects/Lead/fields/Doctors__c.field-meta.xml
<CustomField>
    <fullName>Doctors__c</fullName>
    <label>#Doctors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>