force-app/main/default/objects/Lead/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <formula>IF( NOT(ISNULL(Last_Stage_Change__c)), ((NOW() - Last_Stage_Change__c)*24*60), -1)</formula>
    <label>Duration(Min)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>