force-app/main/default/objects/Lead/fields/Facility_Number_of_Operatories_Chairs__c.field-meta.xml
<CustomField>
    <fullName>Facility_Number_of_Operatories_Chairs__c</fullName>
    <label>Facility Number of Operatories/Chairs</label>
    <length>10</length>
    <type>Text</type>
</CustomField>