force-app/main/default/objects/Lead/fields/Facility_size__c.field-meta.xml
<CustomField>
    <fullName>Facility_size__c</fullName>
    <label>Facility size (sq feet)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>