force-app/main/default/objects/Lead/fields/FB_1st_Contact_Time__c.field-meta.xml
<CustomField>
    <fullName>FB_1st_Contact_Time__c</fullName>
    <label>FB 1st Contact Time</label>
    <type>Date</type>
</CustomField>