force-app/main/default/objects/Lead/fields/FB_2nd_Contact_Time__c.field-meta.xml
<CustomField>
    <fullName>FB_2nd_Contact_Time__c</fullName>
    <label>FB 2nd Contact Time</label>
    <type>Date</type>
</CustomField>