force-app/main/default/objects/Lead/fields/FB_3rd_Contact_Time__c.field-meta.xml
<CustomField>
    <fullName>FB_3rd_Contact_Time__c</fullName>
    <label>FB 3rd Contact Time</label>
    <type>Date</type>
</CustomField>