force-app/main/default/objects/Lead/fields/FB_Ad_Id__c.field-meta.xml
<CustomField>
    <fullName>FB_Ad_Id__c</fullName>
    <label>FB Ad Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>