force-app/main/default/objects/Lead/fields/FB_AIO_AIOP__c.field-meta.xml
<CustomField>
    <fullName>FB_AIO_AIOP__c</fullName>
    <formula>IF(OR( 
      CONTAINS(FB_Campaign_Name__c , &apos;_AIO&apos;),
      CONTAINS(FB_Campaign_Name__c , &apos;_AIOP&apos;)
     )
,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FB AIO/AIOP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>