force-app/main/default/objects/Lead/fields/FB_Campaign_Id__c.field-meta.xml
<CustomField>
    <fullName>FB_Campaign_Id__c</fullName>
    <label>FB Campaign Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>