force-app/main/default/objects/Lead/fields/FB_Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>FB_Campaign_Name__c</fullName>
    <label>FB Campaign Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>