force-app/main/default/objects/Lead/fields/FB_First_Appointment_Id__c.field-meta.xml
<CustomField>
    <fullName>FB_First_Appointment_Id__c</fullName>
    <description>First appointment id detected for the lead</description>
    <label>FB First Appointment Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>