force-app/main/default/objects/Lead/fields/FB_First_Appointment_Trx__c.field-meta.xml
<CustomField>
    <fullName>FB_First_Appointment_Trx__c</fullName>
    <description>The date time the appointment was recorded (approximately when it was entered into Dentrix)</description>
    <label>FB First Appointment Trx</label>
    <type>Date</type>
</CustomField>