force-app/main/default/objects/Lead/fields/FB_Implant_Eagle__c.field-meta.xml
<CustomField>
    <fullName>FB_Implant_Eagle__c</fullName>
    <formula>IF(CONTAINS( FB_Campaign_Name__c , &apos;_ImplantEagle&apos;),1,0)</formula>
    <label>FB Implant Eagle</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>