force-app/main/default/objects/Lead/fields/FB_Master_Patient_Id__c.field-meta.xml
<CustomField>
    <fullName>FB_Master_Patient_Id__c</fullName>
    <description>Master patient id from EDW / Dentrix</description>
    <label>FB Master Patient Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>