force-app/main/default/objects/Lead/fields/FB_NCO__c.field-meta.xml
<CustomField>
    <fullName>FB_NCO__c</fullName>
    <formula>IF(CONTAINS( FB_Campaign_Name__c , &apos;_NCO&apos;),1,0)</formula>
    <label>FB NCO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>