force-app/main/default/objects/Lead/fields/FB_New_Patient__c.field-meta.xml
<CustomField>
    <fullName>FB_New_Patient__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FB New Patient</label>
    <type>Checkbox</type>
</CustomField>