force-app/main/default/objects/Lead/fields/FB_Notification_Sent__c.field-meta.xml
<CustomField>
    <fullName>FB_Notification_Sent__c</fullName>
    <label>FB Notification Sent</label>
    <type>Date</type>
</CustomField>