force-app/main/default/objects/Lead/fields/FB_Notify_Practice__c.field-meta.xml
<CustomField>
    <fullName>FB_Notify_Practice__c</fullName>
    <formula>FB_Practice__r.FB_Notify_Practice__c</formula>
    <label>FB Notify Practice</label>
    <type>Checkbox</type>
</CustomField>