force-app/main/default/objects/Lead/fields/FB_Practice__c.field-meta.xml
<CustomField>
    <fullName>FB_Practice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FB Practice</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>