force-app/main/default/objects/Lead/fields/FB_Practice_Billing_Street__c.field-meta.xml
<CustomField>
    <fullName>FB_Practice_Billing_Street__c</fullName>
    <formula>FB_Practice__r.BillingStreet</formula>
    <label>FB Practice Billing Street</label>
    <type>Text</type>
</CustomField>