force-app/main/default/objects/Lead/fields/FB_Practice_Brand__c.field-meta.xml
<CustomField>
    <fullName>FB_Practice_Brand__c</fullName>
    <formula>TEXT(FB_Practice__r.Brand__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FB Practice Brand</label>
    <type>Text</type>
</CustomField>