force-app/main/default/objects/Lead/fields/FB_Practice_Discount_Optin__c.field-meta.xml
<CustomField>
    <fullName>FB_Practice_Discount_Optin__c</fullName>
    <formula>FB_Practice__r.FB_Discount_Optin__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FB Practice Discount Optin</label>
    <type>Checkbox</type>
</CustomField>