force-app/main/default/objects/Lead/fields/FB_Practice_Email__c.field-meta.xml
<CustomField>
    <fullName>FB_Practice_Email__c</fullName>
    <formula>IF(FB_Practice__r.FB_Practice_Email__c != &apos;&apos;,
    FB_Practice__r.FB_Practice_Email__c,
    FB_Practice__r.FDA_Email__c 
)</formula>
    <label>FB Practice Email</label>
    <type>Text</type>
</CustomField>