force-app/main/default/objects/Lead/fields/FB_Practice_Id__c.field-meta.xml
<CustomField>
    <fullName>FB_Practice_Id__c</fullName>
    <label>FB Practice Id</label>
    <length>5</length>
    <type>Text</type>
</CustomField>