force-app/main/default/objects/Lead/fields/FB_Practice_Website__c.field-meta.xml
<CustomField>
    <fullName>FB_Practice_Website__c</fullName>
    <formula>FB_Practice__r.Website</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FB Practice Website</label>
    <type>Text</type>
</CustomField>