force-app/main/default/objects/Lead/fields/FB_Practice_Zip__c.field-meta.xml
<CustomField>
    <fullName>FB_Practice_Zip__c</fullName>
    <formula>FB_Practice__r.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FB Practice Zip</label>
    <type>Text</type>
</CustomField>