force-app/main/default/objects/Lead/fields/FB_Px_Email_Campaign_Optin__c.field-meta.xml
<CustomField>
    <fullName>FB_Px_Email_Campaign_Optin__c</fullName>
    <formula>FB_Practice__r.FB_Email_Campaign_Opt_In__c</formula>
    <label>FB Px Email Campaign Optin</label>
    <type>Checkbox</type>
</CustomField>