force-app/main/default/objects/Lead/fields/FB_Ready_To_Schedule__c.field-meta.xml
<CustomField>
    <fullName>FB_Ready_To_Schedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FB Ready To Schedule</label>
    <type>Checkbox</type>
</CustomField>