force-app/main/default/objects/Lead/fields/FB_Scheduled_2__c.field-meta.xml
<CustomField>
    <fullName>FB_Scheduled_2__c</fullName>
    <description>2nd date lead is scheduled for contact</description>
    <label>FB Scheduled 2</label>
    <type>Date</type>
</CustomField>