force-app/main/default/objects/Lead/fields/FB_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>FB_Scheduled__c</fullName>
    <formula>If( FB_First_Appointment_Id__c  != null,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FB Scheduled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>