force-app/main/default/objects/Lead/fields/FB_SMS1_Notification_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>FB_SMS1_Notification_Sent_Date__c</fullName>
    <label>FB SMS1 Notification Sent Date</label>
    <type>DateTime</type>
</CustomField>