force-app/main/default/objects/Lead/fields/First_Appt_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Appt_Date__c</fullName>
    <label>First_Appt_Date</label>
    <type>Date</type>
</CustomField>