force-app/main/default/objects/Lead/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <formula>FirstName + &quot; &quot; + LastName + &quot;, &quot; + Suffix</formula>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>