force-app/main/default/objects/Lead/fields/Furlough__c.field-meta.xml
<CustomField>
    <fullName>Furlough__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Furlough</label>
    <type>Checkbox</type>
</CustomField>