force-app/main/default/objects/Lead/fields/If_yes_what_insurance_programs__c.field-meta.xml
<CustomField>
    <fullName>If_yes_what_insurance_programs__c</fullName>
    <label>If yes, what insurance programs?</label>
    <length>150</length>
    <type>Text</type>
</CustomField>