force-app/main/default/objects/Lead/fields/In_network_with_any_insurance_program__c.field-meta.xml
<CustomField>
    <fullName>In_network_with_any_insurance_program__c</fullName>
    <label>In network with any insurance program?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>