force-app/main/default/objects/Lead/fields/Initial_Discussion_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Initial_Discussion_DateTime__c</fullName>
    <label>Initial Discussion DateTime</label>
    <type>DateTime</type>
</CustomField>