force-app/main/default/objects/Lead/fields/Last_12_Month_s_Num_Implants__c.field-meta.xml
<CustomField>
    <fullName>Last_12_Month_s_Num_Implants__c</fullName>
    <label>Last 12 Month&apos;s Num Implants</label>
    <length>255</length>
    <type>Text</type>
</CustomField>