force-app/main/default/objects/Lead/fields/Lead_Notification_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Lead_Notification_Sent_Date__c</fullName>
    <label>Lead Notification Sent Date</label>
    <type>Date</type>
</CustomField>