force-app/main/default/objects/Lead/fields/Location_Id__c.field-meta.xml
<CustomField>
    <fullName>Location_Id__c</fullName>
    <description>Temp - importing practice owners</description>
    <label>Location Id</label>
    <length>6</length>
    <type>Text</type>
</CustomField>