force-app/main/default/objects/Lead/fields/Market_Notes__c.field-meta.xml
<CustomField>
    <fullName>Market_Notes__c</fullName>
    <label>Market Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>